# prototype

./: .clang-format  .classpath  .gitignore  .project  AndroidManifest.xml  CMakeLists.txt  fond_ecran.cproj  fond_ecran.sln  linux.cmake  project.properties  prototype.cproj  prototype.sublime-project  prototype.userprefs
android/: Android.mk  AndroidManifest.xml  Application.mk  fond_ecran.cpp  local.properties  project.properties  prototype.cpp
assets/: 1.lvl  2.lvl  3.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl  cercle.desc  config.ini  decor.desc  default.desc  default.vs  entity_desc.ini  equipment.desc  fighter.desc  font.atlas  font.pkm.00  font.pvr.00  graph.atlas  grid.atlas  icon.atlas  icons.atlas  icons.pkm.00  icons.pvr.00  key_config.cfg  params.ini  pelleteuse.desc  pelleteuse.pkm  pelleteuse.pvr  placement.ini  player.entity  randomize.fs  selected.fs  soccerman.desc  tuning.ini  typo.desc  typo.font
assets/anim/: bulldo.anim  bulldo_idle.anim  bulldo_move.anim  firetruck_move.anim  idle.anim  idleE.anim  idleN.anim  idleNE.anim  idleNW.anim  idleS.anim  idleSE.anim  idleSW.anim  idleW.anim  run.anim  runE.anim  runN.anim  runNE.anim  runNW.anim  runS.anim  runSE.anim  runSW.anim  runW.anim  tackle.anim  walk.anim
assets/entities/: DCA.entity  DCA1.entity  DCA2.entity  DCA_base_b.entity  DCA_base_g.entity  DCA_player1.entity  DCA_player2.entity  action_button.entity  action_point_display.entity  ai.entity  ai_player.entity  arena.entity  back2Menu.entity  background.entity  ball.entity  battleground.entity  block.entity  blueSoldier.entity  blueSoldier_1.entity  blueSoldier_2.entity  body.entity  brush.entity  building.entity  bullet.entity  bullet_ray.entity  burning_tree.entity  button.entity  button_gotomenu.entity  button_restart.entity  button_testnetwork.entity  cage.entity  cage_hitzone.entity  camera.entity  cell.entity  coin.entity  dca.entity  debris.entity  dog.entity  dos_cage.entity  enemy.entity  (+121 more)
assets/hdpi/: alphabet.atlas  alphabet.dds.00  alphabet.pkm.00  alphabet_alpha.dds.00  alphabet_alpha.pkm.00  animals.atlas  animals.dds.00  animals.pkm.00  animals_alpha.dds.00  animals_alpha.pkm.00  animations.atlas  animations.dds.00  animations.dds.01  animations.dds.02  animations.dds.03  animations.pkm.00  animations.pkm.01  animations.pkm.02  animations.pkm.03  animations_alpha.dds.00  animations_alpha.dds.01  animations_alpha.dds.02  animations_alpha.pkm.00  animations_alpha.pkm.01  animations_alpha.pkm.02  characters.atlas  characters.dds.00  characters.pkm.00  characters_alpha.dds.00  characters_alpha.pkm.00  font.atlas  font.dds.00  font.pkm.00  font_alpha.dds.00  font_alpha.pkm.00  graphs.atlas  logo.pkm.00  logo_alpha.pkm.00  misc.atlas  misc.dds.00  (+25 more)
assets/ldpi/: alphabet.atlas  alphabet.dds.00  alphabet.pkm.00  alphabet_alpha.dds.00  alphabet_alpha.pkm.00  animals.atlas  animals.dds.00  animals.pkm.00  animals_alpha.dds.00  animations.atlas  (+30 more)
assetspc/: level1.map  level2.map  level3.map  level4.map  over.fs
linux/: CMakeLists.txt  fond_ecran.cpp  prototype.cpp  recursiveRunner.cpp
modules_cmake/: FindGLEW.cmake  FindGLFW.cmake  FindOpenAL.cmake  FindVPX.cmake
sources/: AISystem.cpp  AISystem.h  BallSystem.cpp  BallSystem.h  BinderSystem.cpp  BinderSystem.h  BulletSystem.cpp  BulletSystem.h  BzzzGame.cpp  BzzzGame.h  CMakeLists.txt  CameraMoveManager.cpp  CameraMoveManager.h  EquipmentSystem.cpp  EquipmentSystem.h  FOVSystem.cpp  FOVSystem.h  FieldPlayerSystem.cpp  FieldPlayerSystem.h  FlagSystem.cpp  FlagSystem.h  Fond_ecranGame.cpp  Fond_ecranGame.h  FootieSystem.cpp  FootieSystem.h  GameLogic.cpp  GameLogic.h  GameMaster.cpp  GameMaster.h  GunSystem.cpp  GunSystem.h  HealthSystem.cpp  HealthSystem.h  HerdingDogGame.cpp  HerdingDogGame.h  IASystem.cpp  IASystem.h  Level.cpp  Level.h  LoopHelper.cpp  (+31 more)
sources/scenes/: ArenaFightScene.cpp  BeginLoopScene.cpp  CheckVictoryScene.cpp  CreateLevelScene.cpp  DefeatScene.cpp  EditorScene.cpp  EndLoopScene.cpp  GameEndScene.cpp  GameScene.cpp  GameStartScene.cpp  InGameScene.cpp  LogoScene.cpp  LoseScene.cpp  MazeGenerationScene.cpp  MenuScene.cpp  MovingScene.cpp  ObjectiveScene.cpp  PlaceYourBetsScene.cpp  Scenes.h  ScoreScene.cpp  SocialCenterScene.cpp  VictoryScene.cpp
sources/states/: AIPlaying.cpp  AIThinking.cpp  ActiveScene.cpp  ArenaFight.cpp  AssignColorStateManager.cpp  BeginTurnScene.cpp  ConnectingScene.cpp  EditorScene.cpp  EndTurnScene.cpp  EquipmentStateManager.cpp  ExecuteAction.cpp  GameEndScene.cpp  GameStartScene.cpp  InGameScene.cpp  IngameScene.cpp  Launch.cpp  LevelEditor.cpp  LevelEditorScene.cpp  Loading.cpp  Logo.cpp  LogoScene.cpp  LogoStateManager.cpp  Menu.cpp  MenuScene.cpp  MenuStateManager.cpp  PausedScene.cpp  PlaceOnBattlefieldStateManager.cpp  PlayScene.cpp  Scenes.h  Score.cpp  SelectAction.cpp  SelectCharacter.cpp  SocialCenter.cpp  SocialCenterScene.cpp  SocialManager.cpp  StateManager.h  Test.cpp  TurnEndScene.cpp  TurnStartScene.cpp  UserInput.cpp  (+2 more)
sources/systems/: AISystem.cpp  AISystem.h  ActionSystem.cpp  ActionSystem.h  ArcherSystem.cpp  ArcherSystem.h  BackgroundSystem.cpp  BackgroundSystem.h  BlockSystem.cpp  BlockSystem.h  BulletSystem.cpp  BulletSystem.h  CornSystem.cpp  CornSystem.h  DCASystem.cpp  DCASystem.h  DefWeaponSystem.cpp  DefWeaponSystem.h  EquipmentSystem.cpp  EquipmentSystem.h  FighterSystem.cpp  FighterSystem.h  FlickSystem.cpp  FlickSystem.h  HighlightSystem.cpp  HighlightSystem.h  InputSystem.cpp  InputSystem.h  KnightSystem.cpp  KnightSystem.h  LevelSystem.cpp  LevelSystem.h  MemorySystem.cpp  MemorySystem.h  MessageSystem.cpp  MessageSystem.h  MorpionGridSystem.cpp  MorpionGridSystem.h  MoveCommandSystem.cpp  MoveCommandSystem.h  (+49 more)
sources/util/: Grid.cpp  Grid.h  LevelLoader.cpp  LevelLoader.h  ParatroopersDebugConsole.cpp  ParatroopersDebugConsole.h  PrototypeDebugConsole.cpp  PrototypeDebugConsole.h  SaveManager.cpp  SaveManager.h  ScoreStorageProxy.cpp  ScoreStorageProxy.h
tests/: TestAlgorithmWalls.cpp  TestScoreStorageProxy.cpp
tools/: change_color.sh  generate_level.py
unprepared_assets/: generate_atlas.sh
(+184 files in other folders)
